made some changes

--- a/index.html
+++ b/index.html
@@ -154,58 +154,16 @@
                 Here are some of the projects I've worked on.
             </p>
             <div class="portfolios">
-
                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/img1.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Url Shortening</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/img4.png" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/img5.png" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
+                            </a>                            
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
@@ -217,14 +175,11 @@
                         <img src="img/img2.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Space Tourism</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
+                            </a>                            
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
@@ -233,17 +188,14 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port5.jpg" alt="">
+                        <img src="img/img3.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Food Delivery</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
+                            </a>                            
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
@@ -252,17 +204,14 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/img4.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Todo App</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
+                            </a>                            
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
@@ -271,23 +220,36 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port7.jpg" alt="">
+                        <img src="img/img5.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Easybank Landing Page</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
+                            </a>                            
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
                 </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/img6.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Loopstudio Landing Page</h3>
+                        <div class="icons">
+                            <a href="#" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>                            
+                            <a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>        
             </div>
         </section>
         <section class="container contact" id="contact">
