Added links to projects

--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                     <div class="hover-items">
                         <h3>Url Shortening</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://adisa-ade.github.io/Url-Shortening/" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>                            
-                            <a href="#" class="icon">
+                            <a href="https://github.com/adisa-ade/Url-Shortening.git" target="_blank" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -177,10 +177,10 @@
                     <div class="hover-items">
                         <h3>Space Tourism</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/adisa-ade/Space-Tourism.git" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>                            
-                            <a href="#" class="icon">
+                            <a href="https://space-tourism-kappa-six.vercel.app/" target="_blank" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -193,10 +193,10 @@
                     <div class="hover-items">
                         <h3>Food Delivery</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/adisa-ade/Food-Delivery-App.git" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>                            
-                            <a href="#" class="icon">
+                            <a href="https://food-delivery-app-two-taupe.vercel.app/" target="_blank" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -209,10 +209,10 @@
                     <div class="hover-items">
                         <h3>Todo App</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/adisa-ade/Todo.git" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>                            
-                            <a href="#" class="icon">
+                            <a href="https://adisa-ade.github.io/Todo/" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -225,10 +225,10 @@
                     <div class="hover-items">
                         <h3>Easybank Landing Page</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/adisa-ade/EasyBank-Landing-Page.git" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>                            
-                            <a href="#" class="icon">
+                            <a href="https://adisa-ade.github.io/EasyBank-Landing-Page/" target="_blank" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -241,10 +241,10 @@
                     <div class="hover-items">
                         <h3>Loopstudio Landing Page</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/adisa-ade/Loop-Studio.git" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>                            
-                            <a href="#" class="icon">
+                            <a href="https://adisa-ade.github.io/Loop-Studio/" target="_blank" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
