--- a/index.html
+++ b/index.html
@@ -82,28 +82,28 @@
                 </div>
             </div>
             <!-- EXPERIENCE -->            
-            <!-- <div class="timeline">
+            <div class="timeline">
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2010 - present</p>
-                    <h5>Web Developer<span> - Vircrosoft</span></h5>
-                    <p>
+                    <p class="tl-duration">2023 - present</p>
+                    <h5>Intern<span> Alhikmah University Ilorin</span></h5>
+                    <!-- <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
+                    </p> -->
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2008 - 2011</p>
-                    <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
-                    <p>
+                    <p class="tl-duration">2024 - present</p>
+                    <h5>Intern<span> HNG11</span></h5>
+                    <!-- <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
+                    </p> -->
                 </div>
-                <div class="timeline-item">
+                <!-- <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
@@ -143,8 +143,8 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
                 </div>
-            </div> -->
-           <!--EXPERIENCE -->
+            </div>  -->
+           <!--EXPERIENCE-->
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
