--- a/index.html
+++ b/index.html
@@ -68,17 +68,8 @@
                         <p class="prog-title">tailwind css</p>                        
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">vuetify</p>                        
-                    </div>
-                    <div class="progress-bar">
-                        <p class="prog-title">vuejs</p>                        
-                    </div>
-                    <div class="progress-bar">
-                        <p class="prog-title">nuxtjs</p>                        
-                    </div>
-                    <div class="progress-bar">
-                        <p class="prog-title">supabase</p>                        
-                    </div>
+                        <p class="prog-title">ReactJs</p>                        
+                    </div>                                        
                 </div>
             </div>
             <!-- EXPERIENCE -->            
@@ -92,14 +83,8 @@
                     <!-- <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p> -->
-<!--                 </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2024 - present</p>
-                    <h5>Intern<span> HNG11</span></h5> --> 
-                 
+<!--                 </div>                             
+        </div>
            <!--EXPERIENCE-->
         </section>
         <section class="container" id="portfolio">
