--- a/index.html
+++ b/index.html
@@ -127,23 +127,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/img3.png" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Food Delivery</h3>
-                        <div class="icons">
-                            <a href="https://github.com/adisa-ade/Food-Delivery-App.git" target="_blank" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>                            
-                            <a href="https://food-delivery-app-two-taupe.vercel.app/" target="_blank" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
+           <div class="portfolio-item">
                     <div class="image">
                         <img src="img/img4.png" alt="">
                     </div>
@@ -159,38 +143,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/img5.png" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Easybank Landing Page</h3>
-                        <div class="icons">
-                            <a href="https://github.com/adisa-ade/EasyBank-Landing-Page.git" target="_blank" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>                            
-                            <a href="https://adisa-ade.github.io/EasyBank-Landing-Page/" target="_blank" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/img6.png" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Loopstudio Landing Page</h3>
-                        <div class="icons">
-                            <a href="https://github.com/adisa-ade/Loop-Studio.git" target="_blank" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>                            
-                            <a href="https://adisa-ade.github.io/Loop-Studio/" target="_blank" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>        
+                  
             </div>
         </section>
         <section class="container contact" id="contact">
@@ -204,7 +157,7 @@
                         <p>
                             Are you seeking a web developer passionate about creative builds and projects? 
                             Feel free to reach out! I'm available for freelance, part-time, and 
-                            junior developer positions. Don't hesitate to contact me.
+                            full-time positions. Don't hesitate to contact me.
                         </p>
                         <div class="contact-info">                            
                             <div class="contact-item">
@@ -219,7 +172,7 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">                                
-                                <a href="https://twitter.com/_adisaade" target="_blank">
+                                <a href="https://twitter.com/_halalCodes" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
                                 <a href="https://github.com/adisa-ade" target="_blank">
